--- a/project.ipynb
+++ b/project.ipynb
@@ -5997,7 +5997,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We obtain a good performance for our final model with an R^2 of 0.69."
+    "We obtain a good performance for our final model with an R^2 of 0.69. The child poverty, earnings as well as food expenditure are good predictors for the healthy score."
    ]
   },
   {
